--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
     "@angular/material": "^10.0.1",
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
+    "material-design-icons-iconfont": "^5.0.1",
+    "ngx-flag-icon-css": "^1.0.1",
+    "ngx-webstorage": "^4.0.1",
+    "flag-icon-css": "^3.4.6",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
+    "@types/lodash": "^4.14.149",
     "@angular/router": "~10.0.2",
     "bootstrap": "^4.5.0",
     "echarts": "^4.2.1",
-    "lodash": "^4.17.19",
     "ngx-echarts": "^4.2.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
@@ -34,11 +40,10 @@
     "@angular-devkit/build-angular": "~0.1000.1",
     "@angular/cli": "~10.0.1",
     "@angular/compiler-cli": "~10.0.2",
-    "@types/echarts": "^4.2.1",
+    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/lodash": "^4.14.159",
-    "@types/node": "^12.11.1",
+    "@types/echarts": "^4.2.1",
     "codelyzer": "^6.0.0-next.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
